--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,19 +770,6 @@ img {
   position: relative;
 }
 
-.sticky{
-  position: -webkit-sticky;
-  position: sticky;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.right-0{
-  right: 0px;
-}
-
 .top-3{
   top: 0.75rem;
 }
@@ -795,12 +782,20 @@ img {
   top: 0px;
 }
 
+.left-0{
+  left: 0px;
+}
+
 .top-1{
   top: 0.25rem;
 }
 
 .right-1{
   right: 0.25rem;
+}
+
+.right-0{
+  right: 0px;
 }
 
 .top-16{
@@ -815,6 +810,54 @@ img {
   right: 1rem;
 }
 
+.left-3{
+  left: 0.75rem;
+}
+
+.right-1\/2{
+  right: 50%;
+}
+
+.right-1\/4{
+  right: 25%;
+}
+
+.right-1\/3{
+  right: 33.333333%;
+}
+
+.right-2\/3{
+  right: 66.666667%;
+}
+
+.right-\[200px\]{
+  right: 200px;
+}
+
+.right-\[340px\]{
+  right: 340px;
+}
+
+.right-\[330px\]{
+  right: 330px;
+}
+
+.right-\[334px\]{
+  right: 334px;
+}
+
+.right-\[320px\]{
+  right: 320px;
+}
+
+.right-\[325px\]{
+  right: 325px;
+}
+
+.top-2{
+  top: 0.5rem;
+}
+
 .z-\[2\]{
   z-index: 2;
 }
@@ -827,17 +870,14 @@ img {
   grid-column: span 12 / span 12;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
-
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
 }
 
-.-mr-14{
-  margin-right: -3.5rem;
+.mx-0{
+  margin-left: 0px;
+  margin-right: 0px;
 }
 
 .ml-auto{
@@ -880,6 +920,10 @@ img {
   margin-top: 0.5rem;
 }
 
+.-mr-14{
+  margin-right: -3.5rem;
+}
+
 .mb-3{
   margin-bottom: 0.75rem;
 }
@@ -908,16 +952,16 @@ img {
   height: 24rem;
 }
 
-.h-14{
-  height: 3.5rem;
-}
-
 .h-full{
   height: 100%;
 }
 
 .h-3{
   height: 0.75rem;
+}
+
+.h-\[400px\]{
+  height: 400px;
 }
 
 .h-7{
@@ -932,24 +976,16 @@ img {
   height: 2.5rem;
 }
 
+.h-14{
+  height: 3.5rem;
+}
+
 .h-8{
   height: 2rem;
 }
 
 .h-5{
   height: 1.25rem;
-}
-
-.h-\[\]{
-  height: ;
-}
-
-.h-9{
-  height: 2.25rem;
-}
-
-.h-60{
-  height: 15rem;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -968,16 +1004,28 @@ img {
   width: 60%;
 }
 
-.w-14{
-  width: 3.5rem;
-}
-
-.w-1\/5{
-  width: 20%;
+.w-28{
+  width: 7rem;
 }
 
 .w-3{
   width: 0.75rem;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-5\/6{
+  width: 83.333333%;
+}
+
+.w-2\/5{
+  width: 40%;
+}
+
+.w-56{
+  width: 14rem;
 }
 
 .w-full{
@@ -990,6 +1038,10 @@ img {
 
 .w-96{
   width: 24rem;
+}
+
+.w-14{
+  width: 3.5rem;
 }
 
 .w-80{
@@ -1012,80 +1064,32 @@ img {
   width: 1.25rem;
 }
 
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-\[240px\]{
-  width: 240px;
-}
-
-.w-1\/4{
-  width: 25%;
-}
-
-.w-2\/5{
-  width: 40%;
+.w-1\/2{
+  width: 50%;
 }
 
 .w-10{
   width: 2.5rem;
 }
 
-.w-16{
-  width: 4rem;
+.w-2\/3{
+  width: 66.666667%;
 }
 
-.w-24{
-  width: 6rem;
+.w-2{
+  width: 0.5rem;
 }
 
-.w-28{
-  width: 7rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-64{
-  width: 16rem;
+.w-48{
+  width: 12rem;
 }
 
 .w-60{
   width: 15rem;
 }
 
-.w-56{
-  width: 14rem;
-}
-
-.w-32{
-  width: 8rem;
-}
-
-.w-36{
-  width: 9rem;
-}
-
-.min-w-full{
-  min-width: 100%;
-}
-
-.min-w-\[400px\]{
-  min-width: 400px;
-}
-
-.min-w-\[200px\]{
-  min-width: 200px;
-}
-
 .max-w-sm{
   max-width: 24rem;
-}
-
-.max-w-\[200px\]{
-  max-width: 200px;
 }
 
 .flex-none{
@@ -1161,14 +1165,6 @@ img {
   resize: both;
 }
 
-.grid-cols-12{
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-cols-3{
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .grid-cols-2{
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
@@ -1177,8 +1173,8 @@ img {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
-.grid-rows-3{
-  grid-template-rows: repeat(3, minmax(0, 1fr));
+.grid-cols-12{
+  grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
 .flex-row{
@@ -1205,6 +1201,10 @@ img {
   justify-content: space-between;
 }
 
+.gap-10{
+  gap: 2.5rem;
+}
+
 .gap-4{
   gap: 1rem;
 }
@@ -1223,30 +1223,6 @@ img {
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.gap-6{
-  gap: 1.5rem;
-}
-
-.gap-16{
-  gap: 4rem;
-}
-
-.gap-20{
-  gap: 5rem;
-}
-
-.gap-36{
-  gap: 9rem;
-}
-
-.gap-1{
-  gap: 0.25rem;
-}
-
-.gap-10{
-  gap: 2.5rem;
 }
 
 .divide-y > :not([hidden]) ~ :not([hidden]){
@@ -1277,20 +1253,12 @@ img {
   overflow-x: auto;
 }
 
-.whitespace-normal{
-  white-space: normal;
-}
-
 .whitespace-nowrap{
   white-space: nowrap;
 }
 
 .break-words{
   overflow-wrap: break-word;
-}
-
-.rounded-full{
-  border-radius: 9999px;
 }
 
 .rounded-2xl{
@@ -1301,6 +1269,10 @@ img {
   border-radius: 50%;
 }
 
+.rounded-full{
+  border-radius: 9999px;
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -1309,16 +1281,12 @@ img {
   border-radius: 0.5rem;
 }
 
-.rounded-xl{
-  border-radius: 0.75rem;
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .border{
   border-width: 1px;
-}
-
-.border-2{
-  border-width: 2px;
 }
 
 .border-b{
@@ -1329,16 +1297,16 @@ img {
   border-bottom-width: 2px;
 }
 
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-t-2{
   border-top-width: 2px;
 }
 
 .border-l-2{
   border-left-width: 2px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-solid{
@@ -1352,6 +1320,11 @@ img {
 
 .border-transparent{
   border-color: transparent;
+}
+
+.border-zinc-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 
 .border-gray-300{
@@ -1379,23 +1352,9 @@ img {
   border-color: rgb(212 212 216 / var(--tw-border-opacity));
 }
 
-.border-zinc-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(228 228 231 / var(--tw-border-opacity));
-}
-
-.border-zinc-100{
-  --tw-border-opacity: 1;
-  border-color: rgb(244 244 245 / var(--tw-border-opacity));
-}
-
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900\/50{
-  background-color: rgb(17 24 39 / 0.5);
 }
 
 .bg-white{
@@ -1458,6 +1417,10 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
+.bg-gray-900\/50{
+  background-color: rgb(17 24 39 / 0.5);
+}
+
 .object-cover{
   -o-object-fit: cover;
      object-fit: cover;
@@ -1489,11 +1452,6 @@ img {
   padding-bottom: 6rem;
 }
 
-.py-3{
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-}
-
 .px-6{
   padding-left: 1.5rem;
   padding-right: 1.5rem;
@@ -1514,6 +1472,16 @@ img {
   padding-bottom: 0.25rem;
 }
 
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1524,9 +1492,23 @@ img {
   padding-right: 1.25rem;
 }
 
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
 }
 
 .pt-28{
@@ -1545,6 +1527,22 @@ img {
   padding-top: 6rem;
 }
 
+.pt-2{
+  padding-top: 0.5rem;
+}
+
+.pt-1{
+  padding-top: 0.25rem;
+}
+
+.pb-6{
+  padding-bottom: 1.5rem;
+}
+
+.pl-3{
+  padding-left: 0.75rem;
+}
+
 .pt-16{
   padding-top: 4rem;
 }
@@ -1553,40 +1551,8 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
-.pt-4{
-  padding-top: 1rem;
-}
-
-.pb-2{
-  padding-bottom: 0.5rem;
-}
-
-.pb-6{
-  padding-bottom: 1.5rem;
-}
-
-.pt-12{
-  padding-top: 3rem;
-}
-
-.pt-3{
-  padding-top: 0.75rem;
-}
-
-.pl-2{
-  padding-left: 0.5rem;
-}
-
-.pl-3{
-  padding-left: 0.75rem;
-}
-
-.pt-1{
-  padding-top: 0.25rem;
+.pt-36{
+  padding-top: 9rem;
 }
 
 .text-left{
@@ -1606,11 +1572,6 @@ img {
   line-height: 2.25rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1621,28 +1582,13 @@ img {
   line-height: 2rem;
 }
 
-.text-xs{
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
 }
 
-.text-lg{
-  font-size: 1.125rem;
+.text-xl{
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1651,42 +1597,44 @@ img {
   line-height: 1.5rem;
 }
 
-.font-medium{
-  font-weight: 500;
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
-.font-light{
-  font-weight: 300;
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.font-medium{
+  font-weight: 500;
 }
 
 .font-normal{
   font-weight: 400;
 }
 
-.font-thin{
-  font-weight: 100;
+.font-light{
+  font-weight: 300;
 }
 
 .font-semibold{
   font-weight: 600;
 }
 
-.font-bold{
-  font-weight: 700;
-}
-
-.font-extralight{
-  font-weight: 200;
+.font-thin{
+  font-weight: 100;
 }
 
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
-}
-
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .text-zinc-500{
@@ -1699,9 +1647,44 @@ img {
   color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-sky-600{
+  --tw-text-opacity: 1;
+  color: rgb(2 132 199 / var(--tw-text-opacity));
+}
+
+.text-rose-600{
+  --tw-text-opacity: 1;
+  color: rgb(225 29 72 / var(--tw-text-opacity));
+}
+
+.text-orange-500{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.text-zinc-700{
+  --tw-text-opacity: 1;
+  color: rgb(63 63 70 / var(--tw-text-opacity));
+}
+
 .text-slate-50{
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+.text-stone-800{
+  --tw-text-opacity: 1;
+  color: rgb(41 37 36 / var(--tw-text-opacity));
+}
+
+.text-zinc-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
 .text-red-800{
@@ -1744,74 +1727,64 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
-.text-sky-700{
+.text-zinc-800{
   --tw-text-opacity: 1;
-  color: rgb(3 105 161 / var(--tw-text-opacity));
+  color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 
-.text-sky-600{
+.text-zinc-300{
   --tw-text-opacity: 1;
-  color: rgb(2 132 199 / var(--tw-text-opacity));
+  color: rgb(212 212 216 / var(--tw-text-opacity));
 }
 
-.text-rose-600{
+.text-zinc-200{
   --tw-text-opacity: 1;
-  color: rgb(225 29 72 / var(--tw-text-opacity));
+  color: rgb(228 228 231 / var(--tw-text-opacity));
 }
 
-.text-orange-500{
-  --tw-text-opacity: 1;
-  color: rgb(249 115 22 / var(--tw-text-opacity));
+.placeholder-zinc-200::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
 }
 
-.text-orange-400{
-  --tw-text-opacity: 1;
-  color: rgb(251 146 60 / var(--tw-text-opacity));
+.placeholder-zinc-200:-ms-input-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
 }
 
-.text-neutral-400{
-  --tw-text-opacity: 1;
-  color: rgb(163 163 163 / var(--tw-text-opacity));
+.placeholder-zinc-200::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
 }
 
-.text-zinc-700{
-  --tw-text-opacity: 1;
-  color: rgb(63 63 70 / var(--tw-text-opacity));
+.placeholder-zinc-300::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
 }
 
-.text-stone-400{
-  --tw-text-opacity: 1;
-  color: rgb(168 162 158 / var(--tw-text-opacity));
+.placeholder-zinc-300:-ms-input-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
 }
 
-.text-stone-600{
-  --tw-text-opacity: 1;
-  color: rgb(87 83 78 / var(--tw-text-opacity));
+.placeholder-zinc-300::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
 }
 
-.text-stone-500{
-  --tw-text-opacity: 1;
-  color: rgb(120 113 108 / var(--tw-text-opacity));
+.placeholder-zinc-400::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-placeholder-opacity));
 }
 
-.text-stone-700{
-  --tw-text-opacity: 1;
-  color: rgb(68 64 60 / var(--tw-text-opacity));
+.placeholder-zinc-400:-ms-input-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-placeholder-opacity));
 }
 
-.text-stone-800{
-  --tw-text-opacity: 1;
-  color: rgb(41 37 36 / var(--tw-text-opacity));
-}
-
-.text-zinc-400{
-  --tw-text-opacity: 1;
-  color: rgb(161 161 170 / var(--tw-text-opacity));
-}
-
-.text-zinc-600{
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
+.placeholder-zinc-400::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-placeholder-opacity));
 }
 
 .opacity-0{
@@ -1846,6 +1819,26 @@ img {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline{
+  outline-style: solid;
+}
+
+.outline-offset-2{
+  outline-offset: 2px;
+}
+
+.outline-zinc-600{
+  outline-color: #52525b;
+}
+
+.outline-zinc-400{
+  outline-color: #a1a1aa;
+}
+
+.outline-zinc-300{
+  outline-color: #d4d4d8;
 }
 
 .ring-2{
@@ -1886,10 +1879,6 @@ img {
   transition-duration: 150ms;
 }
 
-.duration-1000{
-  transition-duration: 1000ms;
-}
-
 .duration-500{
   transition-duration: 500ms;
 }
@@ -1898,8 +1887,8 @@ img {
   transition-duration: 300ms;
 }
 
-.ease-in-out{
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.duration-1000{
+  transition-duration: 1000ms;
 }
 
 .ease-out{
@@ -1908,6 +1897,10 @@ img {
 
 .ease-in{
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+}
+
+.ease-in-out{
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 #sidebar .nav-heading{
@@ -2004,10 +1997,6 @@ img {
     display: none;
   }
 
-  .lg\:w-\[980px\]{
-    width: 980px;
-  }
-
   .lg\:w-\[1024px\]{
     width: 1024px;
   }
@@ -2034,12 +2023,12 @@ img {
     justify-content: space-between;
   }
 
-  .lg\:gap-6{
-    gap: 1.5rem;
-  }
-
   .lg\:gap-36{
     gap: 9rem;
+  }
+
+  .lg\:gap-6{
+    gap: 1.5rem;
   }
 
   .lg\:p-7{
