--- a/public/css/app.css
+++ b/public/css/app.css
@@ -768,6 +768,42 @@ body {
 .right-4{
   right: 1rem;
 }
+.left-3{
+  left: 0.75rem;
+}
+.right-1\/2{
+  right: 50%;
+}
+.right-1\/4{
+  right: 25%;
+}
+.right-1\/3{
+  right: 33.333333%;
+}
+.right-2\/3{
+  right: 66.666667%;
+}
+.right-\[200px\]{
+  right: 200px;
+}
+.right-\[340px\]{
+  right: 340px;
+}
+.right-\[330px\]{
+  right: 330px;
+}
+.right-\[334px\]{
+  right: 334px;
+}
+.right-\[320px\]{
+  right: 320px;
+}
+.right-\[325px\]{
+  right: 325px;
+}
+.top-2{
+  top: 0.5rem;
+}
 .z-\[2\]{
   z-index: 2;
 }
@@ -780,6 +816,10 @@ body {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
+}
+.mx-0{
+  margin-left: 0px;
+  margin-right: 0px;
 }
 .ml-auto{
   margin-left: auto;
@@ -841,6 +881,9 @@ body {
 .h-3{
   height: 0.75rem;
 }
+.h-\[400px\]{
+  height: 400px;
+}
 .h-7{
   height: 1.75rem;
 }
@@ -871,17 +914,17 @@ body {
 .w-3\/5{
   width: 60%;
 }
-.w-96{
-  width: 24rem;
-}
-.w-72{
-  width: 18rem;
+.w-28{
+  width: 7rem;
 }
 .w-3{
   width: 0.75rem;
 }
 .w-1\/3{
   width: 33.333333%;
+}
+.w-5\/6{
+  width: 83.333333%;
 }
 .w-2\/5{
   width: 40%;
@@ -895,6 +938,9 @@ body {
 .w-7{
   width: 1.75rem;
 }
+.w-96{
+  width: 24rem;
+}
 .w-14{
   width: 3.5rem;
 }
@@ -907,23 +953,29 @@ body {
 .w-52{
   width: 13rem;
 }
+.w-72{
+  width: 18rem;
+}
 .w-5{
   width: 1.25rem;
+}
+.w-1\/2{
+  width: 50%;
 }
 .w-10{
   width: 2.5rem;
 }
-.w-24{
-  width: 6rem;
+.w-2\/3{
+  width: 66.666667%;
 }
-.w-32{
-  width: 8rem;
+.w-2{
+  width: 0.5rem;
 }
-.w-36{
-  width: 9rem;
+.w-48{
+  width: 12rem;
 }
-.w-28{
-  width: 7rem;
+.w-60{
+  width: 15rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -998,6 +1050,9 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
+.flex-row{
+  flex-direction: row;
+}
 .flex-col{
   flex-direction: column;
 }
@@ -1013,6 +1068,9 @@ body {
 .justify-between{
   justify-content: space-between;
 }
+.gap-10{
+  gap: 2.5rem;
+}
 .gap-4{
   gap: 1rem;
 }
@@ -1027,12 +1085,6 @@ body {
 }
 .gap-5{
   gap: 1.25rem;
-}
-.gap-6{
-  gap: 1.5rem;
-}
-.gap-10{
-  gap: 2.5rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -1062,9 +1114,6 @@ body {
 .break-words{
   overflow-wrap: break-word;
 }
-.rounded-lg{
-  border-radius: 0.5rem;
-}
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -1077,6 +1126,15 @@ body {
 .rounded-md{
   border-radius: 0.375rem;
 }
+.rounded-lg{
+  border-radius: 0.5rem;
+}
+.rounded{
+  border-radius: 0.25rem;
+}
+.border{
+  border-width: 1px;
+}
 .border-b{
   border-bottom-width: 1px;
 }
@@ -1088,6 +1146,9 @@ body {
 }
 .border-l-2{
   border-left-width: 2px;
+}
+.border-t{
+  border-top-width: 1px;
 }
 .border-solid{
   border-style: solid;
@@ -1114,6 +1175,14 @@ body {
 .border-slate-800{
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
+}
+.border-zinc-400{
+  --tw-border-opacity: 1;
+  border-color: rgb(161 161 170 / var(--tw-border-opacity));
+}
+.border-zinc-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
 }
 .bg-gray-100{
   --tw-bg-opacity: 1;
@@ -1226,6 +1295,21 @@ body {
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
+.px-2{
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+.px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.px-12{
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+.pt-4{
+  padding-top: 1rem;
+}
 .pt-28{
   padding-top: 7rem;
 }
@@ -1240,9 +1324,6 @@ body {
 }
 .pt-2{
   padding-top: 0.5rem;
-}
-.pt-4{
-  padding-top: 1rem;
 }
 .pt-1{
   padding-top: 0.25rem;
@@ -1259,6 +1340,9 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
+.pt-36{
+  padding-top: 9rem;
+}
 .text-left{
   text-align: left;
 }
@@ -1272,6 +1356,10 @@ body {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
@@ -1284,10 +1372,6 @@ body {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .text-base{
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1299,6 +1383,10 @@ body {
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 .font-medium{
   font-weight: 500;
@@ -1391,6 +1479,54 @@ body {
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
+.text-zinc-800{
+  --tw-text-opacity: 1;
+  color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+.text-zinc-300{
+  --tw-text-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-text-opacity));
+}
+.text-zinc-200{
+  --tw-text-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-text-opacity));
+}
+.placeholder-zinc-200::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-200:-ms-input-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-200::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-300::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-300:-ms-input-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-300::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-400::-moz-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-400:-ms-input-placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-placeholder-opacity));
+}
+.placeholder-zinc-400::placeholder{
+  --tw-placeholder-opacity: 1;
+  color: rgb(161 161 170 / var(--tw-placeholder-opacity));
+}
 .opacity-0{
   opacity: 0;
 }
@@ -1403,20 +1539,35 @@ body {
 .opacity-75{
   opacity: 0.75;
 }
-.shadow{
-  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.outline{
+  outline-style: solid;
+}
+.outline-offset-2{
+  outline-offset: 2px;
+}
+.outline-zinc-600{
+  outline-color: #52525b;
+}
+.outline-zinc-400{
+  outline-color: #a1a1aa;
+}
+.outline-zinc-300{
+  outline-color: #d4d4d8;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
