--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -770,16 +770,24 @@ img {
   position: relative;
 }
 
+.right-\[325px\]{
+  right: 325px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.top-2{
+  top: 0.5rem;
+}
+
 .top-3{
   top: 0.75rem;
 }
 
 .right-3{
   right: 0.75rem;
-}
-
-.top-0{
-  top: 0px;
 }
 
 .left-0{
@@ -810,54 +818,6 @@ img {
   right: 1rem;
 }
 
-.left-3{
-  left: 0.75rem;
-}
-
-.right-1\/2{
-  right: 50%;
-}
-
-.right-1\/4{
-  right: 25%;
-}
-
-.right-1\/3{
-  right: 33.333333%;
-}
-
-.right-2\/3{
-  right: 66.666667%;
-}
-
-.right-\[200px\]{
-  right: 200px;
-}
-
-.right-\[340px\]{
-  right: 340px;
-}
-
-.right-\[330px\]{
-  right: 330px;
-}
-
-.right-\[334px\]{
-  right: 334px;
-}
-
-.right-\[320px\]{
-  right: 320px;
-}
-
-.right-\[325px\]{
-  right: 325px;
-}
-
-.top-2{
-  top: 0.5rem;
-}
-
 .z-\[2\]{
   z-index: 2;
 }
@@ -873,11 +833,6 @@ img {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-
-.mx-0{
-  margin-left: 0px;
-  margin-right: 0px;
 }
 
 .ml-auto{
@@ -926,6 +881,10 @@ img {
 
 .mb-3{
   margin-bottom: 0.75rem;
+}
+
+.mt-4{
+  margin-top: 1rem;
 }
 
 .block{
@@ -988,6 +947,14 @@ img {
   height: 1.25rem;
 }
 
+.h-20{
+  height: 5rem;
+}
+
+.h-1{
+  height: 0.25rem;
+}
+
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -998,6 +965,14 @@ img {
 
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-60{
+  width: 15rem;
 }
 
 .w-3\/5{
@@ -1012,12 +987,8 @@ img {
   width: 0.75rem;
 }
 
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-5\/6{
-  width: 83.333333%;
+.w-1\/2{
+  width: 50%;
 }
 
 .w-2\/5{
@@ -1062,30 +1033,6 @@ img {
 
 .w-5{
   width: 1.25rem;
-}
-
-.w-1\/2{
-  width: 50%;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-2\/3{
-  width: 66.666667%;
-}
-
-.w-2{
-  width: 0.5rem;
-}
-
-.w-48{
-  width: 12rem;
-}
-
-.w-60{
-  width: 15rem;
 }
 
 .max-w-sm{
@@ -1177,10 +1124,6 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.flex-row{
-  flex-direction: row;
-}
-
 .flex-col{
   flex-direction: column;
 }
@@ -1261,6 +1204,10 @@ img {
   overflow-wrap: break-word;
 }
 
+.rounded{
+  border-radius: 0.25rem;
+}
+
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -1281,12 +1228,8 @@ img {
   border-radius: 0.5rem;
 }
 
-.rounded{
-  border-radius: 0.25rem;
-}
-
-.border{
-  border-width: 1px;
+.border-t-2{
+  border-top-width: 2px;
 }
 
 .border-b{
@@ -1297,20 +1240,22 @@ img {
   border-bottom-width: 2px;
 }
 
-.border-t-2{
-  border-top-width: 2px;
-}
-
 .border-l-2{
   border-left-width: 2px;
 }
 
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-solid{
   border-style: solid;
+}
+
+.border-zinc-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+
+.border-zinc-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 
 .border-zinc-700{
@@ -1320,11 +1265,6 @@ img {
 
 .border-transparent{
   border-color: transparent;
-}
-
-.border-zinc-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 
 .border-gray-300{
@@ -1342,24 +1282,14 @@ img {
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
 
-.border-zinc-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(161 161 170 / var(--tw-border-opacity));
-}
-
-.border-zinc-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .bg-gray-500{
@@ -1442,6 +1372,11 @@ img {
   padding: 0px;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1482,29 +1417,17 @@ img {
   padding-bottom: 0.75rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
 
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.pt-36{
+  padding-top: 9rem;
 }
 
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
+.pt-2{
+  padding-top: 0.5rem;
 }
 
 .pt-4{
@@ -1527,10 +1450,6 @@ img {
   padding-top: 6rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
 .pt-1{
   padding-top: 0.25rem;
 }
@@ -1551,8 +1470,12 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-36{
-  padding-top: 9rem;
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-left{
@@ -1567,9 +1490,9 @@ img {
   font-family: Mochiy Pop P One, sans-serif;
 }
 
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .text-sm{
@@ -1577,9 +1500,9 @@ img {
   line-height: 1.25rem;
 }
 
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-5xl{
@@ -1607,11 +1530,6 @@ img {
   line-height: 2.5rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
 .font-medium{
   font-weight: 500;
 }
@@ -1630,6 +1548,11 @@ img {
 
 .font-thin{
   font-weight: 100;
+}
+
+.text-zinc-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
 .text-zinc-900{
@@ -1682,11 +1605,6 @@ img {
   color: rgb(41 37 36 / var(--tw-text-opacity));
 }
 
-.text-zinc-600{
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}
-
 .text-red-800{
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
@@ -1725,51 +1643,6 @@ img {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-
-.text-zinc-800{
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-
-.text-zinc-300{
-  --tw-text-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-
-.text-zinc-200{
-  --tw-text-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-text-opacity));
-}
-
-.placeholder-zinc-200::-moz-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-zinc-200:-ms-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-zinc-200::placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-zinc-300::-moz-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-zinc-300:-ms-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-zinc-300::placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
 }
 
 .placeholder-zinc-400::-moz-placeholder{
@@ -1819,26 +1692,6 @@ img {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.outline{
-  outline-style: solid;
-}
-
-.outline-offset-2{
-  outline-offset: 2px;
-}
-
-.outline-zinc-600{
-  outline-color: #52525b;
-}
-
-.outline-zinc-400{
-  outline-color: #a1a1aa;
-}
-
-.outline-zinc-300{
-  outline-color: #d4d4d8;
 }
 
 .ring-2{
