--- a/public/css/app.css
+++ b/public/css/app.css
@@ -738,14 +738,20 @@ body {
 .relative{
   position: relative;
 }
+.right-\[325px\]{
+  right: 325px;
+}
+.top-0{
+  top: 0px;
+}
+.top-2{
+  top: 0.5rem;
+}
 .top-3{
   top: 0.75rem;
 }
 .right-3{
   right: 0.75rem;
-}
-.top-0{
-  top: 0px;
 }
 .left-0{
   left: 0px;
@@ -768,42 +774,6 @@ body {
 .right-4{
   right: 1rem;
 }
-.left-3{
-  left: 0.75rem;
-}
-.right-1\/2{
-  right: 50%;
-}
-.right-1\/4{
-  right: 25%;
-}
-.right-1\/3{
-  right: 33.333333%;
-}
-.right-2\/3{
-  right: 66.666667%;
-}
-.right-\[200px\]{
-  right: 200px;
-}
-.right-\[340px\]{
-  right: 340px;
-}
-.right-\[330px\]{
-  right: 330px;
-}
-.right-\[334px\]{
-  right: 334px;
-}
-.right-\[320px\]{
-  right: 320px;
-}
-.right-\[325px\]{
-  right: 325px;
-}
-.top-2{
-  top: 0.5rem;
-}
 .z-\[2\]{
   z-index: 2;
 }
@@ -816,10 +786,6 @@ body {
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
-}
-.mx-0{
-  margin-left: 0px;
-  margin-right: 0px;
 }
 .ml-auto{
   margin-left: auto;
@@ -856,6 +822,9 @@ body {
 }
 .mb-3{
   margin-bottom: 0.75rem;
+}
+.mt-4{
+  margin-top: 1rem;
 }
 .block{
   display: block;
@@ -902,6 +871,12 @@ body {
 .h-5{
   height: 1.25rem;
 }
+.h-20{
+  height: 5rem;
+}
+.h-1{
+  height: 0.25rem;
+}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -910,6 +885,12 @@ body {
 }
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
+}
+.w-1\/3{
+  width: 33.333333%;
+}
+.w-60{
+  width: 15rem;
 }
 .w-3\/5{
   width: 60%;
@@ -920,11 +901,8 @@ body {
 .w-3{
   width: 0.75rem;
 }
-.w-1\/3{
-  width: 33.333333%;
-}
-.w-5\/6{
-  width: 83.333333%;
+.w-1\/2{
+  width: 50%;
 }
 .w-2\/5{
   width: 40%;
@@ -958,24 +936,6 @@ body {
 }
 .w-5{
   width: 1.25rem;
-}
-.w-1\/2{
-  width: 50%;
-}
-.w-10{
-  width: 2.5rem;
-}
-.w-2\/3{
-  width: 66.666667%;
-}
-.w-2{
-  width: 0.5rem;
-}
-.w-48{
-  width: 12rem;
-}
-.w-60{
-  width: 15rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -1050,9 +1010,6 @@ body {
 .grid-cols-12{
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
-.flex-row{
-  flex-direction: row;
-}
 .flex-col{
   flex-direction: column;
 }
@@ -1114,6 +1071,9 @@ body {
 .break-words{
   overflow-wrap: break-word;
 }
+.rounded{
+  border-radius: 0.25rem;
+}
 .rounded-2xl{
   border-radius: 1rem;
 }
@@ -1129,11 +1089,8 @@ body {
 .rounded-lg{
   border-radius: 0.5rem;
 }
-.rounded{
-  border-radius: 0.25rem;
-}
-.border{
-  border-width: 1px;
+.border-t-2{
+  border-top-width: 2px;
 }
 .border-b{
   border-bottom-width: 1px;
@@ -1141,17 +1098,19 @@ body {
 .border-b-2{
   border-bottom-width: 2px;
 }
-.border-t-2{
-  border-top-width: 2px;
-}
 .border-l-2{
   border-left-width: 2px;
 }
-.border-t{
-  border-top-width: 1px;
-}
 .border-solid{
   border-style: solid;
+}
+.border-zinc-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+.border-zinc-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 .border-zinc-700{
   --tw-border-opacity: 1;
@@ -1159,10 +1118,6 @@ body {
 }
 .border-transparent{
   border-color: transparent;
-}
-.border-zinc-200{
-  --tw-border-opacity: 1;
-  border-color: rgb(228 228 231 / var(--tw-border-opacity));
 }
 .border-gray-300{
   --tw-border-opacity: 1;
@@ -1176,21 +1131,13 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
-.border-zinc-400{
-  --tw-border-opacity: 1;
-  border-color: rgb(161 161 170 / var(--tw-border-opacity));
-}
-.border-zinc-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(212 212 216 / var(--tw-border-opacity));
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-gray-100{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
-}
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .bg-gray-500{
   --tw-bg-opacity: 1;
@@ -1255,6 +1202,10 @@ body {
 .p-0{
   padding: 0px;
 }
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
@@ -1287,25 +1238,15 @@ body {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
 .px-5{
   padding-left: 1.25rem;
   padding-right: 1.25rem;
 }
-.px-2{
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+.pt-36{
+  padding-top: 9rem;
 }
-.px-8{
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-.px-12{
-  padding-left: 3rem;
-  padding-right: 3rem;
+.pt-2{
+  padding-top: 0.5rem;
 }
 .pt-4{
   padding-top: 1rem;
@@ -1322,9 +1263,6 @@ body {
 .pt-24{
   padding-top: 6rem;
 }
-.pt-2{
-  padding-top: 0.5rem;
-}
 .pt-1{
   padding-top: 0.25rem;
 }
@@ -1340,8 +1278,11 @@ body {
 .pr-5{
   padding-right: 1.25rem;
 }
-.pt-36{
-  padding-top: 9rem;
+.pt-10{
+  padding-top: 2.5rem;
+}
+.pt-5{
+  padding-top: 1.25rem;
 }
 .text-left{
   text-align: left;
@@ -1352,17 +1293,17 @@ body {
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-5xl{
   font-size: 3rem;
@@ -1384,10 +1325,6 @@ body {
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
-.text-lg{
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
 .font-medium{
   font-weight: 500;
 }
@@ -1402,6 +1339,10 @@ body {
 }
 .font-thin{
   font-weight: 100;
+}
+.text-zinc-600{
+  --tw-text-opacity: 1;
+  color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 .text-zinc-900{
   --tw-text-opacity: 1;
@@ -1443,10 +1384,6 @@ body {
   --tw-text-opacity: 1;
   color: rgb(41 37 36 / var(--tw-text-opacity));
 }
-.text-zinc-600{
-  --tw-text-opacity: 1;
-  color: rgb(82 82 91 / var(--tw-text-opacity));
-}
 .text-red-800{
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
@@ -1478,42 +1415,6 @@ body {
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
-}
-.text-zinc-800{
-  --tw-text-opacity: 1;
-  color: rgb(39 39 42 / var(--tw-text-opacity));
-}
-.text-zinc-300{
-  --tw-text-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-text-opacity));
-}
-.text-zinc-200{
-  --tw-text-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-text-opacity));
-}
-.placeholder-zinc-200::-moz-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
-}
-.placeholder-zinc-200:-ms-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
-}
-.placeholder-zinc-200::placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(228 228 231 / var(--tw-placeholder-opacity));
-}
-.placeholder-zinc-300::-moz-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
-}
-.placeholder-zinc-300:-ms-input-placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
-}
-.placeholder-zinc-300::placeholder{
-  --tw-placeholder-opacity: 1;
-  color: rgb(212 212 216 / var(--tw-placeholder-opacity));
 }
 .placeholder-zinc-400::-moz-placeholder{
   --tw-placeholder-opacity: 1;
@@ -1553,21 +1454,6 @@ body {
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.outline{
-  outline-style: solid;
-}
-.outline-offset-2{
-  outline-offset: 2px;
-}
-.outline-zinc-600{
-  outline-color: #52525b;
-}
-.outline-zinc-400{
-  outline-color: #a1a1aa;
-}
-.outline-zinc-300{
-  outline-color: #d4d4d8;
 }
 .ring-2{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
